--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "docs": "jsdoc -c jsdoc.json ."
+    "docs": "jsdoc -c jsdoc.json .",
+    "test": "tsc -p . && node test/index"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,8 @@
   },
   "homepage": "https://github.com/Artrix9095/Fuwa.js#readme",
   "dependencies": {
-    "ws": "^7.4.1"
+    "ws": "^7.4.1",
+    "axios": "^0.21.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.13",
