--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./index.d.ts",
   "scripts": {
     "docs": "jsdoc -c jsdoc.json .",
-    "test": "tsc -p . && node test/index"
+    "test": "tsc -p . && node example/index"
   },
   "repository": {
     "type": "git",
