--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "scripts": {
         "docs": "jsdoc -c jsdoc.json .",
         "test": "npm run build && node examples/index",
-        "build": "tsc -p ."
+        "build": "tsc -p .",
+        "format": "npx prettier --config .prettierrc.json 'src/**/*.ts' --write"
     },
     "repository": {
         "type": "git",
@@ -35,7 +36,12 @@
         "@types/ws": "^7.4.0",
         "better-docs": "^2.3.2",
         "clean-jsdoc-theme": "^3.0.1",
+        "husky": "^4.3.6",
         "jsdoc": "^3.6.6",
+        "prettier": "^2.2.1",
         "typescript": "^4.1.3"
+    },
+    "husky": {
+        "pre-push": "npm run format"
     }
 }
