--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
         "typescript": "^4.1.3"
     },
     "husky": {
-        "pre-push": "npm run format && npm run build && npm run docs"
+        "hooks": {
+            "pre-push": "npm run format && npm run build && npm run docs"
+        }
+
     }
 }
