--- a/package.json
+++ b/package.json
@@ -34,17 +34,14 @@
     "devDependencies": {
         "@types/node": "^14.14.13",
         "@types/ws": "^7.4.0",
-        "better-docs": "^2.3.2",
-        "clean-jsdoc-theme": "^3.0.1",
         "husky": "^4.3.6",
-        "jsdoc": "^3.6.6",
         "prettier": "^2.2.1",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "typedoc": "^0.20.13"
     },
     "husky": {
         "hooks": {
             "pre-commit": "echo 'commiting' && npm run format && npm run build && npm run docs"
         }
-
     }
 }
