--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "discordapi"
     ],
     "scripts": {
-        "docs": "npx jsdoc -c jsdoc.json .",
+        "docs": "npx typedoc --options ./docs.js",
         "test": "npm run build && node examples/index",
         "build": "npx tsc -p .",
         "format": "npx prettier --config .prettierrc.json 'src/**/*.ts' --write"
@@ -36,8 +36,8 @@
         "@types/ws": "^7.4.0",
         "husky": "^4.3.6",
         "prettier": "^2.2.1",
-        "typescript": "^4.1.3",
-        "typedoc": "^0.20.13"
+        "typedoc": "^0.20.13",
+        "typescript": "^4.1.3"
     },
     "husky": {
         "hooks": {
