--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "devDependencies": {
         "@types/node": "^14.14.13",
         "@types/ws": "^7.4.0",
+        "@typescript-eslint/eslint-plugin": "^4.12.0",
+        "@typescript-eslint/parser": "^4.12.0",
+        "eslint": "^7.17.0",
         "husky": "^4.3.6",
         "prettier": "^2.2.1",
         "typedoc": "^0.20.13",
