Increase commit speed with lint-staged

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,22 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
+
     "plugins": [
       "@typescript-eslint"
     ],
+
+    "env": {
+        "node": true
+    },
+
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
       "plugin:@typescript-eslint/recommended"
-    ]
+    ],
+    "rules": {
+        "no-ternary": "warn",
+        "no-eq-null": "warn"
+    }
   }
