--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "scripts": {
         "docs": "npx typedoc --options ./docs.js",
         "test": "npm run build && node examples/index",
-        "build": "npx tsc -p .",
-        "format": "npx prettier --config .prettierrc.json 'src/**/*.ts' --write"
+        "build": "npx tsc -p ."
     },
     "repository": {
         "type": "git",
@@ -38,13 +37,18 @@
         "@typescript-eslint/parser": "^4.12.0",
         "eslint": "^7.17.0",
         "husky": "^4.3.6",
+        "lint-staged": "^10.5.3",
         "prettier": "^2.2.1",
         "typedoc": "^0.20.13",
         "typescript": "^4.1.3"
     },
     "husky": {
         "hooks": {
-            "pre-commit": "echo 'commiting' && npm run format && npm run build && npm run docs"
+            "pre-commit": "lint-staged"
         }
+    },
+    "lint-staged": {
+        "*.ts": "eslint --cache --fix",
+        "*.--write": "prettier --write"
     }
 }
