--- a/.eslintrc
+++ b/.eslintrc
@@ -2,22 +2,20 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
 
-    "plugins": [
-      "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint"],
 
     "env": {
         "node": true
     },
 
     "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
         "no-ternary": "warn",
         "no-eq-null": "warn",
         "semi": "error"
     }
-  }
+}
