--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "lint-staged && npm run build"
+            "pre-commit": "lint-staged"
         }
     },
     "lint-staged": {
