--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "scripts": {
         "docs": "npx typedoc --options ./docs.js",
         "test": "npm run build && node examples/index",
+        "test2": "npm run build && cd examples && npx ts-node index.ts",
         "build": "npx tsc -p ."
     },
     "repository": {
