--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "description": "Example",
   "main": "index.js",
   "scripts": {
-    "test": "npx ts-node index.ts"
+    "test": "node index.js"
   },
   "keywords": [],
   "author": "",
