npm test isnt a good test command

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,7 @@ before_install:
     npm install
   # Remove all non-test dependencies
 
-script:
-  - npm test
+# We need a better test command
+# npm test doesnt end
+# script:
+#  - npm test
