--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
         "typedoc": "^0.20.13",
         "typescript": "^4.1.3"
     },
+    "optionalDependencies": {
+        "erlpack": ""
+    },
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged"
