--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "homepage": "https://github.com/Fuwajs/Fuwa.js#readme",
     "dependencies": {
+        "erlpack": "0.1.3",
         "undici": "^3.0.0",
         "ws": "^7.4.1"
     },
@@ -44,7 +45,7 @@
         "typescript": "^4.1.3"
     },
     "optionalDependencies": {
-        "erlpack": ""
+        "erlpack": "^0.1.3"
     },
     "husky": {
         "hooks": {
