Add MIT license to package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "url": "git+https://github.com/Fuwajs/Fuwa.js.git"
     },
     "author": "Artrix",
-    "license": "Apache-2.0",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/Fuwajs/Fuwa.js/issues"
     },
