--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fuwa.js",
-    "version": "0.1.0-alpha",
+    "version": "0.1.0",
     "description": "A new powerful, discord bot library inspired by express",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -28,6 +28,7 @@
     },
     "homepage": "https://github.com/Fuwajs/Fuwa.js#readme",
     "dependencies": {
+        "erlpack": "^0.1.3",
         "undici": "^3.0.0",
         "ws": "^7.4.1"
     },
