add better debug mode & syntax highliting for objects

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "typescript": "^4.1.3"
     },
     "optionalDependencies": {
+        "chalk": "^2.4.2",
         "erlpack": "^0.1.3"
     },
     "husky": {
