test deno & browser support

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,13 @@
 {
     "root": true,
+    
     "parser": "@typescript-eslint/parser",
 
     "plugins": ["@typescript-eslint"],
 
     "env": {
-        "node": true
+        "node": true,
+        "browser": true
     },
 
     "extends": [
