--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Secrets and logs
 *.secret
-debug.log
 *.log
 
 # Cache
 .eslintcache
 
 # Misc
-node_modules
+node_modules/
 .vscode/
 .typedoc.json
 browser/bundle.js
+docs.js
