--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "docs": "npx typedoc --options ./docs.js",
         "test": "npm run build && node examples/index",
-        "browser": "tsc -p . && node ./browser/build.js",
+        "browser": "tsc -p . && node browser",
         "build": "npx tsc -p ."
     },
     "repository": {
@@ -36,7 +36,6 @@
         "@types/ws": "^7.4.0",
         "@typescript-eslint/eslint-plugin": "^4.12.0",
         "@typescript-eslint/parser": "^4.12.0",
-        "browserify": "^17.0.0",
         "husky": "^4.3.6",
         "lint-staged": "^10.5.3",
         "prettier": "^2.2.1",
