--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "homepage": "https://github.com/Fuwajs/Fuwa.js#readme",
     "dependencies": {
         "undici": "^3.0.0",
-        "ws": "^7.4.6"
+        "ws": "^7.4.1"
     },
     "devDependencies": {
         "@types/node": "^14.14.13",
@@ -47,8 +47,8 @@
     },
     "optionalDependencies": {},
     "peerDependencies": {
-        "chalk": "*",
-        "erlpack": "*"
+        "chalk": "^2.4.2",
+        "erlpack": "^0.1.3"
     },
     "husky": {
         "hooks": {
