--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "examples/"
-    ],
+    "include": ["src/**/*"],
+    "exclude": ["examples/"],
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
         /* Basic Options */
@@ -13,13 +9,13 @@
         "module": "CommonJS" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         "lib": [
             "ES2019"
-        ], /* Specify library files to be included in the compilation. */
+        ] /* Specify library files to be included in the compilation. */,
         // "allowJs": true,                       /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
         // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
         "declaration": true /* Generates corresponding '.d.ts' file. */,
         // "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
-        // "sourceMap": true /* Generates corresponding '.map' file. */,
+        "sourceMap": true /* Generates corresponding '.map' file. */,
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
         "outDir": "./dist" /* Redirect output structure to the directory. */,
         "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
@@ -33,7 +29,7 @@
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
         "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
-        "strictNullChecks": false, /* Enable strict null checks. */
+        "strictNullChecks": false /* Enable strict null checks. */,
         // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
         // "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
         // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
@@ -46,12 +42,12 @@
         // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
         // "noUncheckedIndexedAccess": true,      /* Include 'undefined' in index signature results */
         /* Module Resolution Options */
-        "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-        "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+        "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+        "baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
         "paths": {
             "@lib/*": ["src/lib/*"],
-            "@discord/*": ["src/lib/discord/*"],
-        },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+            "@discord/*": ["src/lib/discord/*"]
+        } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
         // "typeRoots": [],                       /* List of folders to include type definitions from. */
         // "types": [],                           /* Type declaration files to be included in compilation. */
