--- a/examples/package.json
+++ b/examples/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "examples",
-  "version": "1.0.0",
-  "description": "Example",
-  "main": "index.js",
-  "scripts": {
-    "test": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "node-fetch": "^2.6.1",
-    "ts-node": "^9.1.1"
-  },
-  "devDependencies": {
-    "@types/node-fetch": "^2.5.7"
-  }
+    "name": "examples",
+    "version": "1.0.0",
+    "description": "Example",
+    "main": "index.js",
+    "scripts": {
+        "test": "node index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "node-fetch": "^2.6.1",
+        "ts-node": "^9.1.1"
+    },
+    "devDependencies": {
+        "@types/node-fetch": "^2.5.7",
+        "nodemon": "^2.0.12"
+    }
 }
