--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     },
     "homepage": "https://github.com/Fuwajs/Fuwa.js#readme",
     "dependencies": {
+        "chalk": "^2.4.2",
+        "erlpack": "*",
         "undici": "^4.5.1",
-        "ws": "^7.4.6"
+        "ws": "^8.2.1"
     },
     "devDependencies": {
         "@types/node": "^14.14.13",
@@ -49,11 +51,6 @@
     "optionalDependencies": {
         "chalk": "^2.4.2",
         "erlpack": "*"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
     },
     "lint-staged": {
         "*.--write": "prettier --write"
