--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     },
     "homepage": "https://fuwajs.github.io",
     "dependencies": {
-        "chalk": "^2.4.2",
+        "bufferutil": "*",
+        "chalk": "*",
         "erlpack": "*",
         "undici": "^4.5.1",
+        "utf-8-validate": "*",
         "ws": "^8.2.1"
     },
     "devDependencies": {
@@ -49,8 +51,10 @@
         "typescript": "^4.1.3"
     },
     "optionalDependencies": {
-        "chalk": "^2.4.2",
-        "erlpack": "*"
+        "bufferutil": "*",
+        "chalk": "*",
+        "erlpack": "*",
+        "utf-8-validate": "*"
     },
     "lint-staged": {
         "*.--write": "prettier --write"
