Examples/Package.json: rename test to start

--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
     "description": "Example",
     "main": "index.js",
     "scripts": {
-        "test": "node index.js"
+        "start": "node index.js"
     },
     "keywords": [],
     "author": "",
