--- a/.npmignore
+++ b/.npmignore
@@ -7,7 +7,9 @@
 
 # Optional Things for github
 .github/
+.gitignore
 examples/
+
 misc/
 *.md
 .travis.yml
@@ -16,6 +18,8 @@ docs.js
 
 # Secrets
 *.secret
+.env.*
+.env
 
 # Typescript features
 tsconfig.json
