--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "prettier": "^2.4.0",
         "typedoc": "^0.22.1",
         "typedoc-plugin-markdown": "^3.11.0",
+        "typedoc-plugin-rename-defaults": "^0.4.0",
         "typescript": "^4.4.3"
     },
     "optionalDependencies": {
