fix linitng and line endings.

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,28 +1,29 @@
 name: Gen Docs
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-    
-    steps:
-    - uses: actions/checkout@v2
+        strategy:
+            matrix:
+                node-version: [12.x, 14.x, 16.x]
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+        steps:
+            - uses: actions/checkout@v2
 
-    - name: Build docs
-      run: |
-        npm install
-        npm run docs
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+
+            - name: Build docs
+              run: |
+                  npm i -g yawn
+                  yarn
+                  yarn docs
