--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "eslint.lintTask.enable": true,
-    "eslint.packageManager": "npm",
+    "eslint.packageManager": "yarn",
     "eslint.debug": true,
-    "eslint.validate": [],
+    "eslint.validate": []
 }
