--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,11 @@
         // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
         /* Language and Environment */
-        "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-        // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+        "target": "es6" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+        "lib": [
+            "es2019"
+        ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+        "moduleResolution": "node",
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
         // "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
         // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -29,8 +32,11 @@
         "module": "CommonJS" /* Specify what module code is generated. */,
         "rootDir": "./src" /* Specify the root folder within your source files. */,
         // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-        // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-        // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+        "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
+        "paths": {
+            "@util/*": ["/util/*"],
+            "@lib/*": ["/lib"]
+        } /* Specify a set of entries that re-map imports to additional lookup locations. */,
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
         // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
@@ -76,8 +82,8 @@
 
         /* Type Checking */
         "strict": true /* Enable all strict type-checking options. */,
-        // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied `any` type.. */
-        // "strictNullChecks": true,                         /* When type checking, take into account `null` and `undefined`. */
+        "noImplicitAny": false /* Enable error reporting for expressions and declarations with an implied `any` type.. */,
+        "strictNullChecks": false /* When type checking, take into account `null` and `undefined`. */,
         // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
         // "strictBindCallApply": true,                      /* Check that the arguments for `bind`, `call`, and `apply` methods match the original function. */
         // "strictPropertyInitialization": true,             /* Check for class properties that are declared but not set in the constructor. */
