--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
         "module": "CommonJS" /* Specify what module code is generated. */,
         "rootDir": "./src" /* Specify the root folder within your source files. */,
         // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-        "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
+        // "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
         "paths": {
             "@util/*": ["/util/*"],
             "@lib/*": ["/lib"]
