--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "erlpack": "^0.1.3"
     },
     "devDependencies": {
+        "@types/module-alias": "^2.0.1",
         "@types/node": "^16.10.1",
         "@types/ws": "^8.2.0",
         "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -35,6 +36,7 @@
         "gulp-eslint": "^6.0.0",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-typescript": "^6.0.0-alpha.1",
+        "module-alias": "^2.2.2",
         "nodemon": "^2.0.13",
         "prettier": "^2.4.1",
         "ts-node": "^10.2.1",
@@ -66,5 +68,11 @@
             "@typescript-eslint/ban-ts-comment": "off",
             "@typescript-eslint/explicit-module-boundary-types": "off"
         }
+    },
+    "_moduleAliases": {
+        "@root/*": "./*",
+        "@util/*": "/util/*",
+        "@lib/*": "/lib/*",
+        "@interfaces/*": "/interfaces/*"
     }
 }
