--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
             "ES2020"
         ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
-        "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
-        "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
+        "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
+        "emitDecoratorMetadata": true /* Emit design-type metadata for decorated declarations in source files. */,
         // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h' */
         // "jsxFragmentFactory": "",                         /* Specify the JSX Fragment reference used for fragments when targeting React JSX emit e.g. 'React.Fragment' or 'Fragment'. */
         // "jsxImportSource": "",                            /* Specify module specifier used to import the JSX factory functions when using `jsx: react-jsx*`.` */
@@ -30,13 +30,13 @@
         /* Modules */
         "module": "CommonJS" /* Specify what module code is generated. */,
         "rootDir": "./src" /* Specify the root folder within your source files. */,
-        "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-        "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
+        "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+        "baseUrl": "src" /* Specify the base directory to resolve non-relative module names. */,
         "paths": {
-            "@root/*": ["./*"], 
-            "@util/*": ["/util/*"],
-            "@lib/*": ["/lib/*"],
-            "@interfaces/*": ["/interfaces/*"]
+            "#root": ["."],
+            "#lib": ["lib/*"],
+            "#util": ["util/*"],
+            "#interfaces": ["interfaces/*"]
         } /* Specify a set of entries that re-map imports to additional lookup locations. */,
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
@@ -54,12 +54,12 @@
         "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
         "declarationMap": true /* Create sourcemaps for d.ts files. */,
         // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
-        "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
+        "sourceMap": true /* Create source map files for emitted JavaScript files. */,
         // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If `declaration` is true, also designates a file that bundles all .d.ts output. */
         "outDir": "./dist" /* Specify an output folder for all emitted files. */,
         // "removeComments": true,                           /* Disable emitting comments. */
         // "noEmit": true,                                   /* Disable emitting files from a compilation. */
-        "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
+        "importHelpers": true /* Allow importing helper functions from tslib once per project, instead of including them per-file. */,
         // "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types */
         // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
         // "mapRoot": "",                                    /* Specify the location where debugger should locate map files instead of generated locations. */
