--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "erlpack": "^0.1.3"
     },
     "devDependencies": {
-        "@types/module-alias": "^2.0.1",
         "@types/node": "^16.10.1",
         "@types/ws": "^8.2.0",
         "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -36,7 +35,6 @@
         "gulp-eslint": "^6.0.0",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-typescript": "^6.0.0-alpha.1",
-        "module-alias": "^2.2.2",
         "nodemon": "^2.0.13",
         "prettier": "^2.4.1",
         "ts-node": "^10.2.1",
@@ -69,10 +67,10 @@
             "@typescript-eslint/explicit-module-boundary-types": "off"
         }
     },
-    "_moduleAliases": {
-        "@root/*": "./*",
-        "@util/*": "/util/*",
-        "@lib/*": "/lib/*",
-        "@interfaces/*": "/interfaces/*"
+    "imports": {
+        "#root": "./dist/*.js",
+        "#lib": "./src/lib/*.js",
+        "#util": "./src/util/*.js",
+        "#interfaces": "./src/interfaces/*.js"
     }
 }
