--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "private": false,
     "scripts": {
+        "pretest": "npx yarn build",
         "build": "npx gulp",
         "lint": "npx eslint ./src/**/*.ts --fix",
         "watch": "npx yarn build -w",
-        "format": "prettier --ignore-path .gitignore --write .",
-        "test": "nodemon tests/index",
+        "format": "prettier --ignore-path .gitignore --write ./src",
+        "testbot": "nodemon tests/bot/index",
+        "test": "jest test/tests",
         "sync-ts-path": "ts-node -r tsconfig-paths/register ./src/index.ts"
     },
     "dependencies": {
@@ -24,6 +26,7 @@
         "erlpack": "^0.1.3"
     },
     "devDependencies": {
+        "@types/jest": "^27.0.2",
         "@types/node": "^16.10.1",
         "@types/ws": "^8.2.0",
         "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -35,6 +38,7 @@
         "gulp-eslint": "^6.0.0",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-typescript": "^6.0.0-alpha.1",
+        "jest": "^27.2.4",
         "nodemon": "^2.0.13",
         "prettier": "^2.4.1",
         "ts-node": "^10.2.1",
