--- a/.npmignore
+++ b/.npmignore
@@ -5,6 +5,9 @@ types
 *.map
 .vscode
 .env
+README.md
+.github
+.gitattributes
 *.log
 config.json
 .dockerignore
@@ -13,5 +16,5 @@ test
 tsconfig.json
 .prettierrc
 Dockerfile
-gulpfie.js
+gulpfile.js
 .eslintignore
