--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,14 +29,17 @@
 
         /* Modules */
         "module": "CommonJS" /* Specify what module code is generated. */,
-        "rootDir": "./src" /* Specify the root folder within your source files. */,
+        "rootDir": "src" /* Specify the root folder within your source files. */,
         "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
-        "baseUrl": "src" /* Specify the base directory to resolve non-relative module names. */,
+        "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
         "paths": {
-            "#root": ["."],
-            "#lib": ["lib/*"],
-            "#util": ["util/*"],
-            "#interfaces": ["interfaces/*"]
+            "@root/*": ["./*"],
+            "@lib/*": ["lib/*"],
+            "@util/*": ["util/*"],
+            "@structures": ["lib/structures/index"],
+            "@structures/*": ["lib/structures/*"],
+            "@interfaces/*": ["interfaces/*"],
+            "@interfaces": ["interfaces/index"]
         } /* Specify a set of entries that re-map imports to additional lookup locations. */,
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
