add slash commands and some house keeping

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,15 +32,15 @@
         "rootDir": "src" /* Specify the root folder within your source files. */,
         "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
         "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
-        "paths": {
-            "@root/*": ["./*"],
-            "@lib/*": ["lib/*"],
-            "@util/*": ["util/*"],
-            "@structures": ["lib/structures/index"],
-            "@structures/*": ["lib/structures/*"],
-            "@interfaces/*": ["interfaces/*"],
-            "@interfaces": ["interfaces/index"]
-        } /* Specify a set of entries that re-map imports to additional lookup locations. */,
+        // "paths": { they dont work and break lib so
+        //     "@root/*": ["./*"],
+        //     "@lib/*": ["lib/*"],
+        //     "@util/*": ["util/*"],
+        //     "@structures": ["lib/structures/index"],
+        //     "@structures/*": ["lib/structures/*"],
+        //     "@interfaces/*": ["interfaces/*"],
+        //     "@interfaces": ["interfaces/index"]
+        // } /* Specify a set of entries that re-map imports to additional lookup locations. */,
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
         // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
