broken stuff, deno suppport? idk fixing http later very broketh

--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
         "sync-ts-path": "ts-node -r tsconfig-paths/register ./src/index.ts"
     },
     "dependencies": {
-        "undici": "^4.7.0",
+        "undici": "^4.9.5",
+        "undici-fetch": "^1.0.0-rc.4",
         "ws": "^8.2.2"
     },
     "optionalDependencies": {
         "erlpack": "^0.1.3"
+    },
+    "denoify": {
+        "out": "deno"
     },
     "devDependencies": {
         "@types/jest": "^27.0.2",
