--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "lint": "npx eslint ./src/**/*.ts --fix",
         "watch": "npx yarn build watch",
         "format": "npx prettier --ignore-path .gitignore --write ./src",
-        "testbot": "nodemon test/bot/index --ignore dist --ignore types",
+        "testbot": "nodemon test/bot/index --ignore out",
         "test": "jest test/tests",
         "sync-ts-path": "ts-node -r tsconfig-paths/register ./src/index.ts"
     },
