more efficient npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,22 +1,7 @@
-*.secret
-src
-node_modules
-*.map
-.vscode
-.env
-README.md
-.github
-deno
-.gitattributes
-*.log
-config.json
-.dockerignore
-Dockerfile
-out/deno
-yarn.lock
-test
-tsconfig.json
-.prettierrc
-Dockerfile
-gulpfile.js
-.eslintignore
+*
+
+!package.json
+!out/dist/**/*.js
+!out/types/**/*.d.ts
+
+!README.md
