rename to docs and fix bugs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,6 @@ jobs:
 
             - name: Build docs
               run: |
-                  npm i -g yawn
-                  yarn
+                  npm i -g yarn
+                  yarn install
                   yarn docs
