--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,9 +2,9 @@ name: Gen Docs
 
 on:
     push:
-        branches: [main]
+        branches: [main, \@next]
     pull_request:
-        branches: [main]
+        branches: [main, \@next]
 
 jobs:
     build:
@@ -12,7 +12,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [12.x, 14.x, 16.x]
+                node-version: [17.x]
 
         steps:
             - uses: actions/checkout@v2
