--- a/.github/workflows/deno-build.yml
+++ b/.github/workflows/deno-build.yml
@@ -33,5 +33,6 @@ jobs:
                   git config user.email "<>"
             - name: commit
               run: |
+                  git add .
                   git commit -m "gen docs"
-                  git push origin next
+                  git push
