--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ name: CI
 
 on:
     push:
-        branches: [main]
+        branches: [main, \@next]
     pull_request:
-        branches: [main]
+        branches: [main, \@next]
 
 jobs:
     build:
@@ -15,7 +15,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [12.x, 14.x, 16.x]
+                node-version: [17.x]
                 # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
         steps:
@@ -27,4 +27,4 @@ jobs:
             - run: npm i -g yarn
             - run: yarn install --frozen-lockfile
             - run: yarn lint
-            - run: yarn build
+            - run: yarn debug
