--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,6 +33,7 @@ jobs:
                   git config user.email "<>"
             - name: commit
               run: |
+                  git pull
                   git add .
                   git commit -m "Gen deno"
                   git push
